# term-webui

./: Makefile  README.md  pyproject.toml
iterm2_webgui/: pyproject.toml  setup.cfg
iterm2_webgui/iterm2_webgui/: iterm2_webgui.py  main.py  proxy_server.py  session_mgr.py
iterm2_webgui/tests/: test_proxy.py  test_session_mgr.py
iterm2_webui/: pyproject.toml  setup.cfg
iterm2_webui/iterm2_webui/: iterm2_webui.py  main.py  proxy_server.py
iterm2_webui/tests/: test_proxy.py  test_session_mgr.py
webgui_demo/: cli.py  pyproject.toml
webgui_demo/tests/: test_cli.py
webgui_protocol/: pyproject.toml
webgui_protocol/tests/: test_osc.py
webgui_protocol/webgui_protocol/: __init__.py  bridge.py  osc.py
webui_demo/: cli.py  pyproject.toml
webui_demo/tests/: test_cli.py
webui_protocol/: pyproject.toml
webui_protocol/tests/: test_osc.py
webui_protocol/webui_protocol/: __init__.py  bridge.py  osc.py
