[project]
name = "term_webui"
version = "0.1.0"
requires-python = ">=3.14"

[tool.uv.sources]
iterm2-webui = { workspace = true }
webui-demo = { workspace = true }  # 声明本地 workspace 依赖
webui-protocol = { workspace = true }  # 声明本地 workspace 依赖

[tool.uv.workspace]
members = ["iterm2_webui", "webui_demo", "webui_protocol"]          # 支持 glob 匹配