[metadata]
name = iterm2-webgui
version = 0.1.0
description = iTerm2 AutoLaunch plugin: terminal-embedded WebView bridge

[options]
packages =
    iterm2_webgui
    webgui_protocol
scripts = iterm2_webgui/iterm2_webgui.py
install_requires =
    iterm2>=2.15
    aiohttp>=3.9
python_requires = >=3.10

[iterm2]
environment = >=74
