[project]
name = "iterm2-webui"
version = "0.1.0"
description = "iTerm2 AutoLaunch plugin: terminal-embedded WebView bridge"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.13.5",
    "iterm2>=2.15",
    "webui-protocol",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.uv.sources]
webui-protocol = { workspace = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
