[metadata]
name = iterm2-webui
version = 0.1.0
description = iTerm2 AutoLaunch plugin: terminal-embedded WebView bridge

[options]
packages =
    iterm2_webui
scripts = iterm2_webui/iterm2_webui.py
install_requires =
    iterm2>=2.15
    aiohttp>=3.9
python_requires = >=3.10

[iterm2]
environment = >=74
