[project]
name = "webgui-demo"
version = "0.1.0"
description = "WebGUI Bridge demo: TODO list + WebSocket echo"
requires-python = ">=3.14"
dependencies = [
    "webgui-protocol",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.uv.sources]
webgui-protocol = { workspace = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
