[project]
name = "webgui-protocol"
version = "0.1.0"
description = "OSC 1337 escape-sequence codec and WebGUI bridge library"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
