[project]
name = "webui-demo"
version = "0.1.0"
description = "WebUI Bridge demo: TODO list + WebSocket echo"
requires-python = ">=3.14"
dependencies = [
    "webui-protocol",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.uv.sources]
webui-protocol = { workspace = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
